# CS311

./: .gitignore  README.md
final/: ans.md
midterm1/: ans.md
midterm2/: ans.md
midterm3/: ans.md
net_maze/: .gitignore  README.md  mix.exs
net_maze/lib/: net_maze.ex
net_maze/lib/net_maze/: gen_server.ex  supervisor.ex
net_maze/test/: net_maze_test.exs
udprip/: Cargo.toml  README.md
udprip/src/: channel.rs  command.rs  main.rs  message.rs  route.rs  socket.rs
video/: feedback_to_colleagues.md  websocket.md
web_maze/: .gitignore  README.md  mix.exs
web_maze/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
web_maze/lib/: web_maze.ex  web_maze_web.ex
web_maze/lib/web_maze/: application.ex  client.ex  mailer.ex  queries.ex  repo.ex
web_maze/lib/web_maze/queries/: query.ex  run.ex
web_maze/lib/web_maze_web/: endpoint.ex  gettext.ex  list_live.ex  queries_live.ex  router.ex  run_live.ex  telemetry.ex
web_maze/lib/web_maze_web/controllers/: fallback_controller.ex  page_controller.ex  query_controller.ex
web_maze/lib/web_maze_web/views/: changeset_view.ex  error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex  query_view.ex
web_maze/priv/repo/: seeds.exs
web_maze/priv/static/: swagger.json
web_maze/test/: test_helper.exs
web_maze/test/support/: conn_case.ex  data_case.ex
web_maze/test/support/fixtures/: queries_fixtures.ex
web_maze/test/web_maze/: queries_test.exs
web_maze_client/: Cargo.toml  README.md
web_maze_client/src/: lib.rs  main.rs  request.rs  response.rs  stats.rs
wireshark_lab/: wireshark_http.md
(+9 files in other folders)
