[package]
name = "udprip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
